# final-year-school-notes

./: .gitignore  README.md
AI_SERVICES_IN_ANALYTICS/Assignment/: AutoML.ipynb  DataPreparation.ipynb  DataPreparation.py  README.md  script.md  voc.py  voc_test.py
AI_SERVICES_IN_ANALYTICS/WEEK_1/: P1_1.py  Untitled.ipynb  Untitled.py  WEEK 1 notes.md  (+4 more)
APPLIED_MACHINE_LEARNING/: >   README.md
DATA_PROCESSING_ON_BIG_DATA/: README.md
MARKETING STRATEGY/: README.md
PRODUCTIVITY_IN_BUSINESS/: ICA2.md
aap/assignment/: .env  pyproject.toml  temp.ipynb
aap/assignment/1scrape/: Data_prep.ipynb  Data_prep.py  glassdoor.py
aap/assignment/2feature_extraction/: Feature_extraction.ipynb  analysis1.py  clean_plan.md  feature_extraction.py  poll_batch.py
aap/assignment/3eda/: EDA.ipynb  analysis2.py  final_cleaned_jobs_profile.html  visuals.py
aap/assignment/4modelling/: Untitled.ipynb  correlation.py  deep.py  final_cleaned_jobs_profile.html  model.py  model_params.joblib  predict.py  salary_data_profile_report.html  separation_deep.py  separation_deep2.py  temp.md  temp.py  text_deep.py
aap/assignment/5app/: Dockerfile  Model_prep.ipynb  README.md  app.py  docker-compose.yml  requirements.txt  salary_scaler.joblib
aap/assignment/6present/: script.md
aap/assignment/archive/: P1_1.ipynb  deployment.md  eda.numbers  eda_analysis_report.html  google.py  indeed.py  jobs_analysis_report.html  other_sites.md
adl/: Practical-1-1.ipynb  Practical-2.ipynb  note.md  week1.md
diyeng/: ICA2.md
dpm/: compaction.md  docker-compose.yml  practical.md  practical_note.md
(+236 files in other folders)
